--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <header class="bg-lime-50">
               <nav class="flex justify-between w-full text-black p-4">
                 <a href="#">
-                    <img src="./assets/img/portfolio.png" class="w-12" alt="Logo de mi Portafolio" />
+                    <img src="./assets/img/maleta.png" class="w-12" alt="Logo de mi Portafolio" />
                 </a>
                   <div class="md:items-center md:w-auto flex">
                     <div class="md:flex hidden">
