--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="w-full h-screen">
-            <header class="bg-lime-50">
+            <header class="bg-green-500">
               <nav class="flex justify-between w-full text-black p-4">
                 <a href="#">
                     <img src="./assets/img/maleta.png" class="w-12" alt="Logo de mi Portafolio" />
@@ -15,13 +15,9 @@
                   <div class="md:items-center md:w-auto flex">
                     <div class="md:flex hidden">
                       <a class="block md:text-black mr-4" href="#">Acerca de</a>
-                      <a class="block md:text-black mr-4" href="#">Blog</a>
+                      <a class="block md:text-orange-500 mr-4" href="#">Blog</a>
                       <a class="block md:text-black mr-4" href="#">Portafolio</a>
                       <a class="block md:text-black mr-4" href="#">Contacto</a>
-                    </div>
-                    <div class="flex text-sm" v-else>
-                        <a class="p-2 ml-2 bg-white text-teal-500 font-semibold leading-none border border-gray-100 rounded hover:border-transparent hover:bg-gray-100" href="#">Login</a>
-                      <a class="p-2 ml-2 bg-teal-500 text-gray-100 font-semibold leading-none border border-teal-600 rounded hover:border-transparent hover:bg-teal-600" href="#">Sign up</a>
                     </div>
                   </div>
               </nav>
